<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:keepScreenOn="true"
    android:orientation="vertical"
    tools:ignore="ExtraText">

    <!-- 비밀번호 재설정화면-->
    <!--인트로화면의 비밀번호 재설정을 누른뒤 화면-->
    <!-- 가입한 이메일주소로 인증-->


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="30dp"
        android:orientation="vertical">

        <!-- 비밀번호재설정 대 title -->
        <TextView
            android:id="@+id/tv_password_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password_reset"
            android:textColor="#7A62CC"
            android:textSize="36sp"
            android:textStyle="normal" />

        <!-- 비밀번호재설정 소 title -->
        <TextView
            android:id="@+id/tv_list_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/password_message_email"
            android:textColor="#666666"
            android:textSize="16sp"
            android:textStyle="normal" />

        <!-- 비밀번호재설정 소 title -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:text="@string/email_check"
            android:textColor="#666666"
            android:textSize="14sp"
            android:textStyle="normal" />

        <!--이메일주소 작성 -->
        <EditText
            android:id="@+id/et_email_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="podo@mail.com" />


        <!--다음버튼-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_line"
            android:backgroundTint="#f4f4f4">

            <TextView
                android:id="@+id/tv_next"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:text="@string/next"
                android:padding="20dp"
                android:textColor="#666666"
                android:textSize="16sp"
                android:textStyle="bold" />
        </RelativeLayout>

    </LinearLayout>


</RelativeLayout>