<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"


    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:keepScreenOn="true"
    android:orientation="vertical"
    tools:ignore="ExtraText">

    <!--설정화면-->
    <!--메뉴-> 리스트의 설정 클릭시 실행-->


    <!--상단 백버튼, 설정 타이틀-->
    <RelativeLayout
        android:id="@+id/note_title_area"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="#ffffff">


        <!-- 뒤로가기 아이콘-->
        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="40dp"
            android:src="@drawable/ic_back_arrow_gray" />


        <!--설정하기-->
        <TextView
            android:id="@+id/tv_note_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:gravity="center"
            android:paddingTop="20dp"
            android:text="@string/setting_title"
            android:textColor="#333333"
            android:textSize="18sp"
            android:textStyle="bold" />
    </RelativeLayout>


    <!--리스트영역시작-->
    <LinearLayout
        android:id="@+id/note_area_start"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/note_title_area"
        android:background="#ffffff"
        android:orientation="vertical">

        <!--구분선-->
        <View
            android:id="@+id/v_title_line"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_marginTop="0dp"
            android:background="#EAEAEA" />


        <!--알람설정-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="UseSwitchCompatOrMaterialXml">

            <TextView
                android:id="@+id/tv_alarm_setting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:padding="20dp"
                android:layout_marginRight="30dp"
                android:text="@string/setting_alarm"
                android:textColor="#666666"
                android:textSize="16sp"
                android:textStyle="normal"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="30dp" />

            <Switch
                android:id="@+id/sw_alarm"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:checked="true"
                android:switchMinWidth="60dp" />
        </LinearLayout>
        <!--구분선-->
        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="#EAEAEA" />

        <!--진동설정-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="UseSwitchCompatOrMaterialXml">

            <TextView
                android:id="@+id/tv_vibes_setting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:padding="20dp"
                android:layout_marginRight="30dp"
                android:text="@string/setting_vibes"
                android:textColor="#666666"
                android:textSize="16sp"
                android:textStyle="normal"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="30dp" />

            <Switch
                android:id="@+id/sw_vibes"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:checked="true"
                android:switchMinWidth="60dp" />
        </LinearLayout>

        <!--구분선-->
        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="#EAEAEA" />

        <!--알람설정-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_ver"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="30dp"
                android:text="@string/setting_version"
                android:textColor="#666666"
                android:textSize="16sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/tv_ver_number"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/setting_version_text"
                android:textAlignment="viewEnd"
                android:textColor="#666666"
                android:textSize="14sp"
                android:textStyle="normal" />

        </LinearLayout>
        <!--구분선-->
        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_marginTop="20dp"
            android:background="#EAEAEA" />


        <!--구분선-->


    </LinearLayout>


</RelativeLayout>



